--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "start": "node ./server.js"
   },
+
+  "engines": {
+    "node":"^12.18.3",
+    "npm":"^6.0.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.0",
     "bootstrap": "^4.5.2",
