--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "assignment01",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
   },
-
   "engines": {
-    "node":"^12.18.3",
-    "npm":"^6.0.0"
+    "node": "^12.18.3",
+    "npm": "^6.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.0",
@@ -21,5 +20,18 @@
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "my first Assignment",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iruchit/Assignment01.git"
+  },
+  "author": "Ruchit Patel",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/iruchit/Assignment01/issues"
+  },
+  "homepage": "https://github.com/iruchit/Assignment01#readme"
 }
